@@ -48,8 +48,27 @@ this repository contains the full copyright notices and license terms. -->
         <menuitem parent="menu_calendar" sequence="1"
             action="act_calendar_form" id="menu_calendar_form"/>
 
+        <record model="ir.rule.group" id="rule_group_calendar_admin">
+            <field name="model" search="[('model', '=', 'calendar.calendar')]"/>
+            <field name="global_p" eval="False"/>
+            <field name="default_p" eval="False"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_write" eval="True"/>
+            <field name="perm_create" eval="True"/>
+            <field name="perm_delete" eval="True"/>
+        </record>
+        <record model="ir.rule" id="rule_group_calendar_admin_line1">
+            <field name="domain">[]</field>
+            <field name="rule_group" ref="rule_group_calendar_admin"/>
+        </record>
+        <record model="ir.rule.group-res.group"
+            id="rule_group_calendar_admin-calendar_admin">
+            <field name="rule_group" ref="rule_group_calendar_admin"/>
+            <field name="group" ref="group_calendar_admin"/>
+        </record>
+
         <record model="ir.rule.group" id="rule_group_read_calendar">
-            <field name="model" search="[('model', '=', 'calendar.event')]"/>
+            <field name="model" search="[('model', '=', 'calendar.calendar')]"/>
             <field name="global_p" eval="False"/>
             <field name="default_p" eval="True"/>
             <field name="perm_read" eval="True"/>
@@ -58,16 +77,16 @@ this repository contains the full copyright notices and license terms. -->
             <field name="perm_delete" eval="False"/>
         </record>
         <record model="ir.rule" id="rule_group_read_calendar_line1">
-            <field name="domain">[('calendar_owner', '=', user.id)]</field>
+            <field name="domain">[('owner', '=', user.id)]</field>
             <field name="rule_group" ref="rule_group_read_calendar"/>
         </record>
         <record model="ir.rule" id="rule_group_read_calendar_line2">
-            <field name="domain">[('calendar_read_users', '=', user.id)]</field>
+            <field name="domain">[('read_users', '=', user.id)]</field>
             <field name="rule_group" ref="rule_group_read_calendar"/>
         </record>
 
         <record model="ir.rule.group" id="rule_group_write_calendar">
-            <field name="model" search="[('model', '=', 'calendar.event')]"/>
+            <field name="model" search="[('model', '=', 'calendar.calendar')]"/>
             <field name="global_p" eval="False"/>
             <field name="default_p" eval="True"/>
             <field name="perm_read" eval="True"/>
@@ -76,11 +95,11 @@ this repository contains the full copyright notices and license terms. -->
             <field name="perm_delete" eval="True"/>
         </record>
         <record model="ir.rule" id="rule_group_write_calendar_line1">
-            <field name="domain">[('calendar_owner', '=', user.id)]</field>
+            <field name="domain">[('owner', '=', user.id)]</field>
             <field name="rule_group" ref="rule_group_write_calendar"/>
         </record>
         <record model="ir.rule" id="rule_group_write_calendar_line2">
-            <field name="domain">[('calendar_write_users', '=', user.id)]</field>
+            <field name="domain">[('write_users', '=', user.id)]</field>
             <field name="rule_group" ref="rule_group_write_calendar"/>
         </record>
 
@@ -145,6 +164,61 @@ this repository contains the full copyright notices and license terms. -->
         </record>
         <menuitem parent="menu_calendar_form" sequence="20"
             action="act_event_form" id="menu_event_form"/>
+
+        <record model="ir.rule.group" id="rule_group_event_admin">
+            <field name="model" search="[('model', '=', 'calendar.event')]"/>
+            <field name="global_p" eval="False"/>
+            <field name="default_p" eval="False"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_write" eval="True"/>
+            <field name="perm_create" eval="True"/>
+            <field name="perm_delete" eval="True"/>
+        </record>
+        <record model="ir.rule" id="rule_group_event_admin_line1">
+            <field name="domain">[]</field>
+            <field name="rule_group" ref="rule_group_event_admin"/>
+        </record>
+        <record model="ir.rule.group-res.group"
+            id="rule_group_event_admin-calendar_admin">
+            <field name="rule_group" ref="rule_group_event_admin"/>
+            <field name="group" ref="group_calendar_admin"/>
+        </record>
+
+        <record model="ir.rule.group" id="rule_group_read_event">
+            <field name="model" search="[('model', '=', 'calendar.event')]"/>
+            <field name="global_p" eval="False"/>
+            <field name="default_p" eval="True"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_write" eval="False"/>
+            <field name="perm_create" eval="False"/>
+            <field name="perm_delete" eval="False"/>
+        </record>
+        <record model="ir.rule" id="rule_group_read_event_line1">
+            <field name="domain">[('calendar.owner', '=', user.id)]</field>
+            <field name="rule_group" ref="rule_group_read_event"/>
+        </record>
+        <record model="ir.rule" id="rule_group_read_event_line2">
+            <field name="domain">[('calendar.read_users', '=', user.id)]</field>
+            <field name="rule_group" ref="rule_group_read_event"/>
+        </record>
+
+        <record model="ir.rule.group" id="rule_group_write_event">
+            <field name="model" search="[('model', '=', 'calendar.event')]"/>
+            <field name="global_p" eval="False"/>
+            <field name="default_p" eval="True"/>
+            <field name="perm_read" eval="True"/>
+            <field name="perm_write" eval="True"/>
+            <field name="perm_create" eval="True"/>
+            <field name="perm_delete" eval="True"/>
+        </record>
+        <record model="ir.rule" id="rule_group_write_event_line1">
+            <field name="domain">[('calendar.owner', '=', user.id)]</field>
+            <field name="rule_group" ref="rule_group_write_event"/>
+        </record>
+        <record model="ir.rule" id="rule_group_write_event_line2">
+            <field name="domain">[('calendar.write_users', '=', user.id)]</field>
+            <field name="rule_group" ref="rule_group_write_event"/>
+        </record>
 
         <record model="ir.action.act_window" id="act_event_form3">
             <field name="name">Events</field>
