@@ -1,3 +1,6 @@
+* Add record rule to calendar
+* Add full access to calendar admin. group
+
 Version 3.4.0 - 2014-10-20
 * Bug fixes (see mercurial logs for details)
 
